# openapi/api/v1/openapi.yaml
@@ -285,6 +285,70 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Owner'
+  /hosts/{hostName}/owners/{ownerLogin}/repositories:
+    get:
+      summary: get a list of repositories from a owner
+      operationId: getHostOwnerRepositories
+      parameters:
+        - in: path
+          name: hostName
+          schema:
+            type: string
+          required: true
+          description: name of host
+        - in: path
+          name: ownerLogin
+          schema:
+            type: string
+          required: true
+          description: login of owner
+        - name: page
+          in: query
+          description: pagination page number 
+          required: false
+          schema:
+            type: integer
+        - name: per_page
+          in: query
+          description: Number of records to return 
+          required: false
+          schema:
+            type: integer
+        - name: created_after
+          in: query
+          description: filter by created_at after given time
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: updated_after
+          in: query
+          description: filter by updated_at after given time
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: sort
+          in: query
+          description: field to order results by
+          required: false
+          schema:
+            type: string
+        - name: order
+          in: query
+          description: direction to order results by
+          required: false
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Repository'
   /hosts/{hostName}/repositories:
     get:
       summary: get a list of repositories from a host
@@ -736,6 +800,10 @@ components:
           type: string
           format: date-time
         owner_url:
+          type: string
+        repositories_url:
+          type: string
+        html_url:
           type: string
     Topic:
       type: object
